# reprodl2021

./: .gitignore  Adversarial Notebook.ipynb  Dockerfile  Initial Notebook.ipynb  LICENSE  Makefile  README.md  audionet_model  data.dvc  data_retrieval.py  dvc.yaml  extra_AutoPyTorch.py  extra_autopytorch_esc50.py  keepsake.yaml  params.yaml  pre-commit  pyproject.toml  requirements.txt  results.py  scheduler.py  sweep.yaml  test_audionet.py  train.py  train_HydraPlusOptuna.py  train_explain.ipynb
.dvc/: .gitignore  config
.dvc/plots/: confusion.json  confusion_normalized.json  default.json  linear.json  scatter.json  smooth.json
.github/workflows/: push-workflow.yml
configs/: default.yaml
data/: .gitignore  ESC-50.dvc  initial.dvc
models/: audionet.onnx
results/: test_scores.json
serve/: gen_dict.py  handler.py  index_to_name.json  model.pth  model.py
serve/model_store/: AUDIONET.mar
src/: prepare_data.py  train.py
src/lightning_logs/version_0/: events.out.tfevents.1633361189.riccardo-NH5x-NH7x-HHx-HJx-HKx.13866.0
src/lightning_logs/version_0/checkpoints/: epoch=2-step=449.ckpt
src/lightning_logs/version_1/: events.out.tfevents.1633361356.riccardo-NH5x-NH7x-HHx-HJx-HKx.13955.0
src/lightning_logs/version_1/checkpoints/: epoch=2-step=449.ckpt
tests/: test_reproddl2021_extra_poetry.py
