[tool.poetry]
name = "reprodDL2021_extra_poetry"
version = "0.1.0"
description = ""
authors = ["kforcode-intellect <kaushal.prajapati@intellectdesign.com>"]
authors = ["Timur Obukhov <obukhov@diag.uniroma1.it>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "3.4.1"
torch = "1.8.1"
numpy = "1.20.2"
hydra-core = "1.0.6"
pandas = "1.2.3"
pytorch-lightning = "1.3.0"
tqdm = "4.60.0"
torchaudio = "0.8.1"
omegaconf = "2.0.6"
librosa = "0.8.0"
seaborn = "0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
